<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            android:layout_marginTop="32dp"
            android:id="@+id/congratulation_card"
            app:cardBackgroundColor="#FAFAFA"
            app:cardElevation="0dp"
            android:layout_gravity="bottom">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/title"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textColor="@android:color/primary_text_light"
                    android:layout_marginTop="48dp"
                    android:text="@string/giftpublished"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="16sp"
                    android:layout_marginRight="8dp"
                    android:id="@+id/message"
                    android:gravity="center"
                    android:text="@string/itsreadytogo"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/backgroundlinear">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/imageorder"/>

                </LinearLayout>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:text="@string/keepbrowsing"
                    android:id="@+id/read_btn"
                    android:gravity="center"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="center"
                    android:textColor="@color/text_color"
                    android:background="@drawable/buttonbg"
                    android:layout_marginBottom="16dp"


                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:padding="1dp"
            android:src="@drawable/icon_done"
            android:background="@drawable/circular_tick"
            android:layout_gravity="center_horizontal|top"
            />

    </FrameLayout>
</LinearLayout>