<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/linear_layout"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="@drawable/profilebg"
    tools:context=".Views.Profile_Edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.25"
        android:weightSum="3"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_gravity="start"
            android:background="@drawable/gift_recive_back"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <com.arena.gifttobuddy.customfonts.MyTextView_SF_Pro_Display_Regular
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/text_color"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/profile_activity"/>
        </LinearLayout>
        <TextView
            android:id="@+id/savetxt"
            android:layout_width="0dp"
            android:layout_weight="0.65"
            android:layout_gravity="end"
            android:text="@string/save"
            android:textSize="18sp"
            android:textColor="@color/textcolor"
            android:gravity="center"
            android:layout_height="match_parent"/>




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="4.45"
        android:layout_height="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

              <RelativeLayout
                  android:layout_width="120dp"
                  android:layout_height="120dp"
                  android:background="@drawable/cameraelipse"
                  android:layout_marginTop="25dp"
                  android:layout_gravity="center"
                  android:gravity="center">

                  <FrameLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent">

                      <com.arena.gifttobuddy.Utils.CircleImageView
                          android:id="@+id/imageview_account_profiless"
                          android:layout_width="90dp"
                          android:layout_gravity="center"
                          android:scaleType="centerInside"
                          android:adjustViewBounds="true"
                          android:src="@drawable/ic_camera"
                          android:layout_height="90dp"/>

                      <com.arena.gifttobuddy.Utils.CircleImageView
                          android:id="@+id/pickImg"
                          android:layout_width="40dp"
                          android:layout_height="40dp"
                          android:layout_gravity="top|right"
                          android:adjustViewBounds="true"
                          android:paddingLeft="10dp"
                          android:src="@android:drawable/ic_menu_edit"
                          app:strokeColor="@color/stroke_color"
                          app:strokeWidth="5px" />

                  </FrameLayout>



              </RelativeLayout>



              <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="30dp"
                      android:padding="15dp"
                      android:background="@drawable/background"
                      android:orientation="vertical">

                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="20dp"/>

                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="60dp"
                          android:orientation="vertical"
                          android:weightSum="3">
                          <TextView
                              android:layout_width="match_parent"
                              android:layout_height="0dp"
                              android:layout_weight="0.9"
                              android:text="Full Name"
                              android:textAppearance="@style/TextAppearance.AppCompat"/>
                          <EditText
                              android:id="@+id/name"
                              android:layout_width="match_parent"
                              android:layout_height="0dp"
                              android:text="fsfs"
                              android:layout_weight="2.1"/>

                      </LinearLayout>
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="60dp"
                          android:orientation="vertical"
                          android:weightSum="3">
                          <TextView
                              android:layout_width="match_parent"
                              android:layout_height="0dp"
                              android:layout_weight="0.9"
                              android:text="Bio"
                              android:textAppearance="@style/TextAppearance.AppCompat"/>
                          <EditText
                              android:id="@+id/bio"
                              android:layout_width="match_parent"
                              android:layout_height="0dp"
                              android:layout_weight="2.1"/>

                      </LinearLayout>
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="60dp"
                          android:orientation="vertical"
                          android:weightSum="3">
                          <TextView
                              android:layout_width="match_parent"
                              android:layout_height="0dp"
                              android:layout_weight="0.9"
                              android:text="Profession"
                              android:textAppearance="@style/TextAppearance.AppCompat"/>
                          <EditText
                              android:id="@+id/profession"
                              android:layout_width="match_parent"
                              android:layout_height="0dp"
                              android:layout_weight="2.1"/>

                      </LinearLayout>
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="60dp"
                          android:orientation="vertical"
                          android:weightSum="3">
                          <TextView
                              android:layout_width="match_parent"
                              android:layout_height="0dp"
                              android:layout_weight="0.9"
                              android:text="Email"
                              android:textAppearance="@style/TextAppearance.AppCompat"/>
                          <EditText
                              android:id="@+id/email"
                              android:layout_width="match_parent"
                              android:layout_height="0dp"
                              android:layout_weight="2.1"/>

                      </LinearLayout>
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="60dp"
                          android:orientation="vertical"
                          android:weightSum="3">
                          <TextView
                              android:layout_width="match_parent"
                              android:layout_height="0dp"
                              android:layout_weight="0.9"
                              android:text="Phone Number"
                              android:textAppearance="@style/TextAppearance.AppCompat"/>

                          <EditText
                              android:id="@+id/mobile"
                              android:layout_width="match_parent"
                              android:layout_height="0dp"
                              android:layout_weight="2.1" />

                      </LinearLayout>
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="10dp"/>
                      <com.arena.gifttobuddy.customfonts.MyTextView_SF_Pro_Display_Regular
                          android:layout_width="match_parent"
                          android:layout_height="30dp"
                          android:textSize="12sp"
                          android:textAppearance="@style/TextAppearance.AppCompat.Large"
                          android:text="@string/connectsociallink" />
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="15dp"/>
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="50dp"
                          android:orientation="horizontal"
                          android:weightSum="5">
                          <LinearLayout
                              android:layout_width="0dp"
                              android:layout_height="match_parent"
                              android:layout_weight="1"
                              android:orientation="horizontal"
                              android:gravity="center">
                              <LinearLayout
                                  android:layout_width="50dp"
                                  android:layout_height="50dp"
                                  android:gravity="center"
                                  android:elevation="8dp"
                                  android:background="@drawable/circular_bg"
                                  android:orientation="horizontal">
                                  <FrameLayout
                                      android:id="@+id/FrameLayout1"
                                      android:layout_width="match_parent"
                                      android:layout_height="wrap_content" >

                                      <com.facebook.login.widget.LoginButton
                                          android:id="@+id/login_button"
                                          android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:visibility="gone" />

                                      <ImageView
                                          android:id="@+id/fb_login"
                                          android:layout_width="25dp"
                                          android:layout_height="25dp"
                                          android:layout_gravity="center"
                                          android:src="@drawable/fb_icon"
                                          />
                                  </FrameLayout>

                              </LinearLayout>

                          </LinearLayout>
                          <LinearLayout
                              android:layout_width="0dp"
                              android:layout_height="match_parent"
                              android:layout_weight="1"
                              android:orientation="horizontal"
                              android:gravity="center">
                              <LinearLayout
                                  android:layout_width="50dp"
                                  android:layout_height="50dp"
                                  android:gravity="center"
                                  android:elevation="8dp"
                                  android:background="@drawable/circular_bg"
                                  android:orientation="horizontal">
                                  <FrameLayout
                                      android:id="@+id/FrameLayout2"
                                      android:layout_width="match_parent"
                                      android:layout_height="wrap_content" >

                                      <com.google.android.gms.common.SignInButton
                                          android:id="@+id/google_button"
                                          android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:visibility="gone" />

                                      <ImageView
                                          android:id="@+id/google_login"
                                          android:layout_width="25dp"
                                          android:layout_height="25dp"
                                          android:layout_gravity="center"
                                          android:src="@drawable/google_icon"
                                          />
                                  </FrameLayout>
                              </LinearLayout>

                          </LinearLayout>
                          <LinearLayout
                              android:layout_width="0dp"
                              android:layout_height="match_parent"
                              android:layout_weight="1"
                              android:orientation="horizontal"
                              android:gravity="center">
                              <LinearLayout
                                  android:layout_width="50dp"
                                  android:layout_height="50dp"
                                  android:gravity="center"
                                  android:elevation="8dp"
                                  android:background="@drawable/circular_bg"
                                  android:orientation="horizontal">
                                  <ImageView
                                      android:id="@+id/insta_login"
                                      android:layout_width="25dp"
                                      android:layout_height="25dp"
                                      android:src="@drawable/insta_icon"
                                      />


                              </LinearLayout>

                          </LinearLayout>


                      </LinearLayout>
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="20dp"/>

                  </LinearLayout>









          </LinearLayout>


        </ScrollView>

    </LinearLayout>



</LinearLayout>